[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
dotenvy = "0.15"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = "1.0.159"
