[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = "0.3.28"
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-async-std-native-tls", "macros" ] }
